--- a/jobs/install_postgresql.yml
+++ b/jobs/install_postgresql.yml
@@ -35,3 +35,8 @@
   become_user: postgres
 
 
+#go to postgresql in server and enable pg_stream for 
+#CREATE EXTENSION pg_trgm;
+#CREATE EXTENSION unaccent; # unaccent('èéêë') ->> eeee
+ 
+#sudo -u postgres psql , use command in server
